[package]
name = "engine"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.13.1",features=["derive"]}
env_logger = "0.10"
image = "0.24"
log = "0.4"
pollster = "0.3"
rand = "0.8.5"
wgpu = "0.17"
winit = "0.28.6"
kira = "0.8.5"
